--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,3 @@
-<button kendoButton *ngIf="!opened" (click)="open()">Open dialog</button>
-<kendo-dialog
-  title="Please confirm"
-  *ngIf="opened"
-  (close)="close('cancel')"
-  [minWidth]="250"
-  [width]="450"
->
-  <p style="margin: 30px; text-align: center;">
-    Are you sure you want to continue?
-  </p>
-  <kendo-dialog-actions>
-    <button kendoButton (click)="close('no')">No</button>
-    <button kendoButton (click)="close('yes')" themeColor="primary">Yes</button>
-  </kendo-dialog-actions>
-</kendo-dialog>
-
 <ng-template #content let-modal>
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
@@ -25,28 +8,22 @@
       (click)="modal.dismiss('Cross click')"
     ></button>
   </div>
-  <div class="modal-body">
-    <p style="margin: 30px; text-align: center;">
-      Are you sure you want to continue?
-    </p>
-  </div>
+  <div class="modal-body"></div>
   <div class="modal-footer">
-    <button
-      type="button"
-      class="btn btn-outline-dark"
-      (click)="modal.close('No click')"
-    >
-      No
-    </button>
-
     <button
       type="button"
       class="btn btn-outline-dark"
       (click)="modal.close('Save click')"
     >
-      Yes
+      Save
     </button>
   </div>
 </ng-template>
 
-<button class="btn" (click)="openBt(content)">Open bootstrap modal</button>
+<button class="btn btn-lg btn-outline-primary" (click)="open(content)">
+  Launch demo modal
+</button>
+
+<hr />
+
+<pre>{{ closeResult }}</pre>
