--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,11 @@
       <p>Are you sure you want to continue?</p>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn" (click)="modal.close('No click')">
+      <button
+        type="button"
+        class="btn btn-light"
+        (click)="modal.close('No click')"
+      >
         No
       </button>
 
@@ -57,28 +61,28 @@
 <hr />
 
 <div>
-<h1>Pulsanti Bootstrap</h1>
-<button type="button" class="btn btn-primary">Primary</button>
-<button type="button" class="btn btn-secondary">Secondary</button>
-<button type="button" class="btn btn-success">Success</button>
-<button type="button" class="btn btn-danger">Danger</button>
-<button type="button" class="btn btn-warning">Warning</button>
-<button type="button" class="btn btn-info">Info</button>
-<button type="button" class="btn btn-light">Light</button>
-<button type="button" class="btn btn-dark">Dark</button>
+  <h1>Pulsanti Bootstrap</h1>
+  <button type="button" class="btn btn-primary">Primary</button>
+  <button type="button" class="btn btn-secondary">Secondary</button>
+  <button type="button" class="btn btn-success">Success</button>
+  <button type="button" class="btn btn-danger">Danger</button>
+  <button type="button" class="btn btn-warning">Warning</button>
+  <button type="button" class="btn btn-info">Info</button>
+  <button type="button" class="btn btn-light">Light</button>
+  <button type="button" class="btn btn-dark">Dark</button>
 </div>
 
 <hr />
 
 <div>
-<h1>Pulsanti Kendo</h1>
-<button kendoButton themeColor="primary">Primary</button>
-<button kendoButton themeColor="secondary">Secondary</button>
-<button kendoButton themeColor="success">Success</button>
-<button kendoButton themeColor="error">Danger</button>
-<button kendoButton themeColor="warning">Warning</button>
-<button kendoButton themeColor="info">Info</button>
-<button kendoButton themeColor="light">Light</button>
-<button kendoButton themeColor="dark">Dark</button>
-<button kendoButton>Base</button>
+  <h1>Pulsanti Kendo</h1>
+  <button kendoButton themeColor="primary">Primary</button>
+  <button kendoButton themeColor="secondary">Secondary</button>
+  <button kendoButton themeColor="success">Success</button>
+  <button kendoButton themeColor="error">Danger</button>
+  <button kendoButton themeColor="warning">Warning</button>
+  <button kendoButton themeColor="info">Info</button>
+  <button kendoButton themeColor="light">Light</button>
+  <button kendoButton themeColor="dark">Dark</button>
+  <button kendoButton>Base</button>
 </div>
